crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__yield_from__starred_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/yield_from/starred_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            13,
        ),
        range: 0..100,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        4,
                    ),
                    range: 70..83,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: NodeIndex(
                                3,
                            ),
                            range: 70..83,
                            value: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(
                                        2,
                                    ),
                                    range: 81..83,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                1,
                                            ),
                                            range: 82..83,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        12,
                    ),
                    range: 84..100,
                    value: YieldFrom(
                        ExprYieldFrom {
                            node_index: NodeIndex(
                                11,
                            ),
                            range: 84..100,
                            value: Tuple(
                                ExprTuple {
                                    node_index: NodeIndex(
                                        10,
                                    ),
                                    range: 95..100,
                                    elts: [
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(
                                                    7,
                                                ),
                                                range: 95..97,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(
                                                            6,
                                                        ),
                                                        range: 96..97,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    9,
                                                ),
                                                range: 99..100,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: false,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Yield from doesn't allow top-level starred expression unlike yield
2 |
3 | yield from *x
  |            ^^ Syntax Error: Starred expression cannot be used here
4 | yield from *x, y
  |


  |
3 | yield from *x
4 | yield from *x, y
  |            ^^ Syntax Error: Starred expression cannot be used here
  |
